[package]
name = "simpleldap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.12.0", features = ["rt-multi-thread", "macros", "signal", "io-util", "net"]}
tokio-util = {version = "0.6.8", features = ["codec"]}
ldap3_server = "0.1.7"
futures = "0.3.17"
sqlite = "0.26.0"
regex = "1.5.4"
rust-crypto = "0.2.36"